ajuste de estilo

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -495,8 +495,12 @@
 
 #breadcrumb
   background-color breadcrumbClr
+  border-bottom 1px solid black
   a
     color fontClr
+  .breadcrumb
+    margin-bottom 0
+    background-color breadcrumbClr
 
 /* -- SELECT -- */
 .demo-select-header
