--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -8,19 +8,19 @@
 primary = #03A9F4
 info = #00bcd4
 success = #85ce88
-danger = #ff5849
+danger = #ff4b7d
 warning = #ff9039
 default = #ddd
 dark = #777
 optional = #f387c7
 
 /* variables */
-breadcrumbClr = #e9ecef
+breadcrumbClr = transparent
 shoppingCart = white
 qtyCartClr = warning
 wSlider = 100% //width slidet home
 hSlider = 400px //slider for home height
-hSmallSlider = 330px //slider for products or small slider height
+hSmallSlider = 400px //slider for products or small slider height
 wSmallSlider = 100% //slider for products or small slider width
 hShopCart = 100px //shopcart image size height
 wShopCart = 100% //shopcart image size width
