ajuste final de estilo

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -50,6 +50,11 @@ md-input-container
 .article-content
   padding 60px 0
 
+.mobile-hidde
+  display inline
+
+.desk-hidde
+  display none
 /* - HEADER STYLES LAYOUT - */
 .three-rows-nav
   .first-row
@@ -180,6 +185,8 @@ md-input-container
 
 /* ------ TEMP SHOPPING CART STYLE ----- */
 .temp-shopcart
+  .list-item-shoppingcart
+    margin-bottom 30px
   .shopcart-delete-lg
     margin-top 15px
     padding 0
@@ -191,12 +198,15 @@ md-input-container
   .shopcart-description
     text-align center
     margin-top 25px
+    margin-top 25px
 .text-left
   text-align left !important
 
 /* ------ TEMP login CART STYLE ----- */
 #login
-  background-color #f5f5f5
+  background-image: url('../img/bg-login.jpg');
+  background-size cover
+  background-position center
 
 #temp-checkout
   .items-dashboard
