--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,7 +24,7 @@
                             </md-input-container>
                             <p class="text-center"><a class="text-dark" ui-sref="recovery-password">¿Olvidaste la contraseña?</a></p>
                             <div class="text-center" style="padding-top: 40px;">
-                                <button type="submit" class="btn btn-outline-danger" ng-disabled="loginForm.$invalid">
+                                <button type="submit" class="btn btn-black" ng-disabled="loginForm.$invalid">
                                     Iniciar sesión <span ng-if="Contact.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
                                 </button>
@@ -201,7 +201,7 @@
                             </div>
 
                             <div class="text-center" style="padding-top: 15px;">
-                                <button type="submit" class="btn btn-outline-danger"
+                                <button type="submit" class="btn btn-black"
                                         ng-disabled="registerForm.$invalid">
                                     Regístrarme <span ng-if="Access.busy"><i
                                         class="fa fa-spinner fa-spin"></i></span>
