--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -135,6 +135,7 @@
   margin-bottom 15px
   transition(all 1s )
   a
+    color fontClr
     &:hover
       text-decoration none
     .box-title
@@ -185,7 +186,7 @@
       background-size cover
       background-repeat no-repeat
       background-position center
-      height 300px
+      height 200px
   .box-article
     color fontClr
 
@@ -443,11 +444,13 @@
   widget(transparent, 2px, 20px, none, none)
 
 .box-widget-white
-  background-color #f9f9f9
+  background-color transparent
   border none
   border-radius 3px
-  box-shadow 0 0 10px rgba(0,0,0,0.05)
   padding 15px
+  margin 25px 0
+  hr
+    border-color black
   .widget-title-first
     background transparent
     padding 10px 5px
@@ -611,3 +614,27 @@ figure.effect-sadie:hover p, figure.effect-sadie:hover a
   opacity 1
   -webkit-transform translate3d(0,0,0)
   transform translate3d(0,0,0)
+
+/* paginator */
+.ng-table-pager
+  padding 20px 0
+.pagination
+  padding 0 10px 30px
+  float right
+  li
+    a
+      color fontClr
+      padding 0 15px
+      border 1px solid black
+      font-weigh bold
+  li.active a
+    background-color black
+    padding 0 15px
+    color white
+    border 1px solid black
+    &:hover
+      border 1px solid black
+      background-color black
+      font-weight bold
+      padding 0 15px
+      color white
