--- a/app/css/main.css
+++ b/app/css/main.css
@@ -355,6 +355,9 @@ audio:not([controls]),
   -webkit-transition: all 1s;
   transition: all 1s;
 }
+.box-simple a {
+  color: #000;
+}
 .box-simple a:hover {
   text-decoration: none;
 }
@@ -415,7 +418,7 @@ audio:not([controls]),
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 300px;
+  height: 200px;
 }
 .box-bordered .box-article {
   color: #000;
@@ -706,11 +709,14 @@ audio:not([controls]),
   box-shadow: none;
 }
 .box-widget-white {
-  background-color: #f9f9f9;
+  background-color: transparent;
   border: none;
   border-radius: 3px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.05);
   padding: 15px;
+  margin: 25px 0;
+}
+.box-widget-white hr {
+  border-color: #000;
 }
 .box-widget-white .widget-title-first {
   background: transparent;
@@ -892,11 +898,37 @@ figure.effect-sadie:hover a {
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
+.ng-table-pager {
+  padding: 20px 0;
+}
+.pagination {
+  padding: 0 10px 30px;
+  float: right;
+}
+.pagination li a {
+  color: #000;
+  padding: 0 15px;
+  border: 1px solid #000;
+  font-weigh: bold;
+}
+.pagination li.active a {
+  background-color: #000;
+  padding: 0 15px;
+  color: #fff;
+  border: 1px solid #000;
+}
+.pagination li.active a:hover {
+  border: 1px solid #000;
+  background-color: #000;
+  font-weight: bold;
+  padding: 0 15px;
+  color: #fff;
+}
 .block-ui-overlay {
   width: 100%;
   height: 100%;
   opacity: 1;
-  background: #f5f5f5 /* fallback for old browsers */;
+  background: #000 /* fallback for old browsers */;
 }
 .block-ui-message {
   background: transparent;
@@ -1062,6 +1094,161 @@ figure.effect-sadie:hover a {
     -webkit-transform: scale(1);
   }
 }
+@-webkit-keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+@-moz-keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+@-o-keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+.heartbeat {
+  font-family: sans-serif;
+  font-weight: 100;
+  margin-left: 10px;
+  top: -15px;
+}
+.heartbeat:not(:required) {
+  -webkit-animation: heartbeat 1300ms ease 0s infinite normal;
+  -khtml-animation: heartbeat 1300ms ease 0s infinite normal;
+  -moz-animation: heartbeat 1300ms ease 0s infinite normal;
+  -ms-animation: heartbeat 1300ms ease 0s infinite normal;
+  -o-animation: heartbeat 1300ms ease 0s infinite normal;
+  animation: heartbeat 1300ms ease 0s infinite normal;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  text-indent: -9999px;
+  padding-left: 30px;
+  width: 36px;
+  height: 36px;
+  -moz-transform: rotate(45deg) scale(1);
+  -ms-transform: rotate(45deg) scale(1);
+  -webkit-transform: rotate(45deg) scale(1);
+  transform: rotate(45deg) scale(1);
+  -moz-transform-origin: 50% 50%;
+  -ms-transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+}
+.heartbeat:not(:required):after,
+.heartbeat:not(:required):before {
+  position: absolute;
+  content: "";
+  background: #f387c7;
+}
+.heartbeat:not(:required):before {
+  -moz-border-radius-topleft: 12px;
+  -webkit-border-top-left-radius: 12px;
+  border-top-left-radius: 12px;
+  -moz-border-radius-bottomleft: 12px;
+  -webkit-border-bottom-left-radius: 12px;
+  border-bottom-left-radius: 12px;
+  top: 12px;
+  left: 0;
+  width: 36px;
+  height: 24px;
+}
+.heartbeat:not(:required):after {
+  -moz-border-radius-topleft: 12px;
+  -webkit-border-top-left-radius: 12px;
+  border-top-left-radius: 12px;
+  -moz-border-radius-topright: 12px;
+  -webkit-border-top-right-radius: 12px;
+  border-top-right-radius: 12px;
+  top: 0;
+  left: 12px;
+  width: 24px;
+  height: 12px;
+}
 @-moz-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
@@ -1140,6 +1327,134 @@ figure.effect-sadie:hover a {
   40% {
     -webkit-transform: scale(1);
     transform: scale(1);
+  }
+}
+@-moz-keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+@-webkit-keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+@-o-keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+}
+@keyframes heartbeat {
+  0% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  14% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  28% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
+  }
+  42% {
+    -moz-transform: rotate(45deg) scale(1.3);
+    -ms-transform: rotate(45deg) scale(1.3);
+    -webkit-transform: rotate(45deg) scale(1.3);
+    transform: rotate(45deg) scale(1.3);
+  }
+  70% {
+    -moz-transform: rotate(45deg) scale(1);
+    -ms-transform: rotate(45deg) scale(1);
+    -webkit-transform: rotate(45deg) scale(1);
+    transform: rotate(45deg) scale(1);
   }
 }
 @media print {
@@ -1223,6 +1538,12 @@ md-input-container {
 }
 .article-content {
   padding: 60px 0;
+}
+.mobile-hidde {
+  display: inline;
+}
+.desk-hidde {
+  display: none;
 }
 .three-rows-nav .first-row .nav-link {
   padding: 5px 0 0;
@@ -1348,6 +1669,9 @@ md-input-container {
   background-color: #777;
   border-color: #777;
 }
+.temp-shopcart .list-item-shoppingcart {
+  margin-bottom: 30px;
+}
 .temp-shopcart .shopcart-delete-lg {
   margin-top: 15px;
   padding: 0;
@@ -1362,12 +1686,15 @@ md-input-container {
 .temp-shopcart .shopcart-description {
   text-align: center;
   margin-top: 25px;
+  margin-top: 25px;
 }
 .text-left {
   text-align: left !important;
 }
 #login {
-  background-color: #f5f5f5;
+  background-image: url("../img/bg-login.jpg");
+  background-size: cover;
+  background-position: center;
 }
 #temp-checkout .items-dashboard {
   margin-top: 20px;
@@ -1757,7 +2084,7 @@ footer .contact-sty .download-app > i:hover {
     height: 40px;
   }
   .slider-img {
-    height: 350px;
+    height: 185px;
     background-size: 100%;
     background-position: left;
   }
@@ -1853,6 +2180,26 @@ footer .contact-sty .download-app > i:hover {
   }
 }
 @media only screen and (max-width: 767px) {
+  .owl-carousel-products .owl-nav button.owl-prev {
+    left: 0;
+  }
+  .owl-carousel-products .owl-nav button.owl-prev:hover {
+    color: #f387c7;
+    background-color: transparent;
+  }
+  .owl-carousel-products .owl-nav button.owl-next {
+    right: 0;
+  }
+  .first-row .nav {
+    -ms-flex-pack: center !important;
+    justify-content: center !important;
+  }
+  .shopping-cart {
+    top: -25px;
+  }
+  .shopping-cart i {
+    color: #000;
+  }
   .xs-hidde {
     display: none;
   }
@@ -1904,11 +2251,23 @@ footer .contact-sty .download-app > i:hover {
     background-color: transparent;
     border-color: transparent;
   }
+  .mobile-hidde {
+    display: none !important;
+  }
+  .desk-hidde {
+    display: inline !important;
+  }
   .slider-box .slider-img {
-    height: 100px;
+    height: 185px;
   }
   .slider-box .owl-nav {
     display: none;
+  }
+  .slider-small .col-sm-3 {
+    border: 1px solid #000;
+    margin: 35px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   .section-one .rounded-cicle {
     margin-top: 15px;
