ajuste de diseño en template search, 404 y filtros por categoria -tipos-

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -286,7 +286,7 @@
       color danger
   .slider-page
     height hSmallSlider
-    background-position top
+    background-position center
     background-size wSmallSlider
     background-repeat no-repeat
   .owl-nav
