--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,7 +1,7 @@
-<section id="content-area" class="content-blog">
+<section class="content-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <div class="col-md-12 title-post">
                     <h2 class="title">Página no encontrada</h2>
                 </div>
@@ -9,7 +9,7 @@
                     <p>Lo sentimos pero la página que estás buscando no la hemos encontrado.</p>
                 </div>
             </div>
-            <div class="col-md-3 widgets">
+            <div class="col-md-4 widgets">
                 <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
