--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -64,7 +64,7 @@
                                         <button class="btn btn-danger"
                                                 ng-click="Product.setItem({id: product.id, image: product.featuredImage.url,
                                             name: product.name, price: product.price, qty: 1,
-                                            taxonomies : product.taxonomies}, 1)"
+                                            taxonomies : product.taxonomies, shipmentPrice: product.shipmentPrice, typeTax: product.typeTax}, 1)"
                                                 ng-disabled="Product.itemInCart(product)">
                                             Agregar
                                         </button>
