--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
 
-                            <md-input-container>
+                            <md-input-container ng-if="registerExtend">
                                 <label>Tipo de negocio</label>
                                 <md-select ng-model="Access.formData.metadata.businessType" required name="giro">
                                     <md-option ng-value="option" ng-repeat="option in Access.optionsForbusinessType">
@@ -143,7 +143,7 @@
                                     <div class="text-danger" ng-message="required">Este campo es requerido.</div>
                                 </div>
                             </md-input-container>
-                            <div class="row" ng-if="registerExtend">
+                            <div class="row" >
                                 <div class="col-md-6">
                                     <md-input-container class="md-block">
                                         <label for="city">Estado</label>
